--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@ title: the first test here
 author: nstflecher
 email: personalnst@gmail.com
 description: A wonderful site
-twitter_username: kjsksajd
-github_username: Jekyll
-
+twitter_username: nstflecher
+github_username: nstflecher
 
 # Build settings
 markdown: kramdown
