--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # basic options
 author: nstflecher
 email: personalnst@gmail.com
-description: A wonderful site
+description: This is my first website built with Github
 twitter_username: nstflecher
 github_username: nstflecher
 
